Fix header wrapping

--- a/res/style.scss
+++ b/res/style.scss
@@ -109,6 +109,8 @@
         line-height: 1.25;
         display: flex;
         flex-direction: row;
+        padding-right: 110px;
+        box-sizing: border-box;
 
         & .info {
             width: 100%;
@@ -116,7 +118,6 @@
 
         & .title {
             font-size: 130%;
-            padding-right: 110px;
         }
 
         .at_author[data-username="[deleted]"] {
